--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 html {
-    font-size: 15px;
+    font-size: 10px;
 }
 
 h1 {
@@ -39,7 +39,10 @@ h6 {
     font-size: 1rem;
 }
 
-
+.future {
+    text-align: left;
+    padding-left: 7px;
+}
 
 
 
