fixed error that was coming up for when the user has history of cities already by changing the variable name history to old; replaced the i tag to an image tag to the search button and sized it accordingly; added bottom margin for the button; added a little more info on the README.md.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,13 @@ h6 {
 }
 
 /*styles the search button*/
+
 .btn {
     border: 2px solid rgba(2, 117, 216, 0.4);
+    margin-bottom: 5px;
 }
-
+img {
+    width: 20px;
+    height: 20px;
+    
+}
